# Chess-Engine

./: CMakeLists.txt  Dockerfile  README.md  main.cpp  run.sh  testclass.cpp  testclass.h
Board/: board.cpp  board.h
Pieces/Bishop/: bishop.h
Pieces/King/: king.h
Pieces/Knight/: knight.h
Pieces/Pawn/: pawn.h
Pieces/Piece/: piece.cpp  piece.h
Pieces/Queen/: queen.h
Pieces/Rook/: rook.cpp  rook.h
Player/: player.cpp  player.h
Rules/: move_generation.cpp  move_generation.h  move_generator.cpp  move_generator.h  ray_generator.cpp  ray_generator.h  rules.cpp  rules.h
Rules/MoveGenerator/: get_legal_moves.tpp  move_generator.cpp  move_generator.h  move_generator.tpp
Rules/RayGenerator/: ray_generator.cpp  ray_generator.h
Utils/: enums.cpp  global.h  utils.cpp  utils.h
